# Udec_Robotic_Writer

./: Build_PyInstaller.ps1  README.md  Readme.md  build.spec  leer.m  pyproject.toml  requirements.txt  run_api.py  run_app.py  run_frontend.py
MatlabActual/: DirectoG.m  GMenu.m  GpEscritor.m  Gpdirecto.asv  Gpdirecto.fig  Gpdirecto.m  Gpinverso.fig  Gpinverso.m  Hogar.m  InversoG.m  Motormove.m  Posiciones.txt  Stop.m  med.sw3  p_inverso.m
docs/: Methodology_history.md  architecture.md  arduino_firmware.md  development_history.md  methodology.md  references.md  user_guide.md
docs/equations/: kinematics.md
legacy/: Readme_original.md  leer.m
legacy/MatlabActual/: CuentasRemanentes.m  DetenerMotor.m  DirectoG.m  EstadoSwitch.M  GpEntrenarAutomatico.fig  GpEntrenarAutomatico.m  GpEntrenarNormal.fig  GpEntrenarNormal.m  GpEscritor.fig  GpEscritor.m  MotormovePR.M  coordenadas.m  p_directo.m  rutina.m
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  cursive.py  kinematics.py  modes.py  robot.py  rrt_planner.py  writer.py
src/frontend/: __init__.py  app.py
src/frontend/assets/: custom.css
src/hardware/: __init__.py  arduino_adapter.py  base.py  matlab_adapter.py  serial_adapter.py
tests/: test_api.py  test_cursive.py  test_kinematics.py  test_robot.py  test_rrt_planner.py
